# SocketProject

./: CMakeLists.txt  SocketConfig.h  SocketConfig.h.in  client.cpp  server.cpp  users.txt
.cache/clangd/index/: ServerTCPConnection.hpp.89A530726150FC72.idx  TCPClient.cpp.B8B5E434A93D0E05.idx  TCPClient.hpp.BAC5B676FACFC55A.idx  TCPServer.cpp.57383C9666C24AD2.idx  TCPServer.hpp.8AC6E6B467897756.idx  client.cpp.9037BEB58CD1A3BA.idx  server.cpp.C95F62BDBCAE131C.idx
Client/: CMakeLists.txt  client.cpp  howToCompile.md
Client/include/: TCPClient.hpp
Client/src/: TCPClient.cpp
Server/: CMakeLists.txt  howToCompile.md  server.cpp  users.txt
Server/include/: TCPServer.hpp
Server/src/: TCPServer.cpp
include/: ServerTCPConnection.hpp  SplitTimerCounter.h
include/Client/: TCPClient.hpp
include/Server/: ServerFunctions.hpp  ServerTCPConnection.hpp  TCPServer.hpp
src/: SplitTimerCounter.cpp
src/Client/: TCPClient.cpp
src/Server/: TCPServer.cpp
